syntax = "proto3";

package services.tasks_svc.v1;

import "services/tasks_svc/v1/types.proto";
import "google/protobuf/timestamp.proto";

option go_package = "gen/services/tasks-svc/v1";


//
// CreateTask
//

message CreateTaskRequest {
  string name = 1; // @gotags: validate:"required"
  optional string description = 2;
  optional bool public = 4;
  google.protobuf.Timestamp due_at = 5;
  optional TaskStatus initial_status = 6;
  repeated SubTask subtasks = 8; // @gotags: validate:"dive"

  message SubTask {
    string name = 1; // @gotags: validate:"required"
    optional bool done = 2; // default: false
  }
}

message CreateTaskResponse {
  string id = 1;
}

//
// UpdateTask
//

message UpdateTaskRequest {
  string id = 1; // @gotags: validate:"uuid4"
  optional string name = 2;
  optional string description = 3;
  optional google.protobuf.Timestamp due_at = 4;
  optional TaskStatus status = 5;
  optional bool public = 6;
}

message UpdateTaskResponse {}

//
// GetTask
//

message GetTaskRequest {
  string id = 1; // @gotags: validate:"uuid4"
}

message GetTaskResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated SubTask subtasks = 4;
  TaskStatus status = 5;
  google.protobuf.Timestamp created_at = 6;
  bool public = 7;
  optional google.protobuf.Timestamp due_at = 8;
  string created_by = 9;

  message SubTask {
    string id = 1;
    string name = 2;
    bool done = 3;
  }
}

//
// GetAllTasks
//

message GetAllTasksRequest {}

message GetAllTasksResponse {
  repeated Task tasks = 1;

  message Task {
    string id = 1;
    string name = 2;
    string description = 3;
    repeated SubTask subtasks = 4;
    TaskStatus status = 5;
    google.protobuf.Timestamp created_at = 6;
    bool public = 7;
    optional google.protobuf.Timestamp due_at = 8;
    string created_by = 9;

    message SubTask {
      string id = 1;
      string name = 2;
      bool done = 3;
    }
  }
}
//
// CreateSubtask
//

message CreateSubtaskRequest {
  string task_id = 1; // @gotags: validate:"uuid4"
  Subtask subtask = 2; // @gotags: validate:"required"

  message Subtask {
    string name = 1; // @gotags: validate:"required"
    optional bool done = 2; // default: false
  }
}

message CreateSubtaskResponse {
  string subtask_id = 1;
}

//
// UpdateSubtask
//

message UpdateSubtaskRequest {
  string task_id = 1; // @gotags: validate:"uuid4"
  string subtask_id = 2; // @gotags: validate:"uuid4"
  Subtask subtask = 3; // @gotags: validate:"required"

  message Subtask {
    optional string name = 1; // @gotags: validate:"omitnil,min=1"
    optional bool done = 2;
  }
}

message UpdateSubtaskResponse {}

//
// DeleteSubtask
//

message DeleteSubtaskRequest {
  string task_id = 1; // @gotags: validate:"uuid4"
  string subtask_id = 2; // @gotags: validate:"uuid4"
}

message DeleteSubtaskResponse {}

//
// RemoveTaskDueDate
//

message RemoveTaskDueDateRequest {
  string task_id = 1; // @gotags: validate:"uuid4"
}

message RemoveTaskDueDateResponse {}

//
// DeleteTask
//

message DeleteTaskRequest {
  string id = 1; // @gotags: validate:"uuid4"
}

message DeleteTaskResponse {}


//
// TaskService
//

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse) {}
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {}
  rpc GetAllTasks(GetAllTasksRequest) returns (GetAllTasksResponse) {}
  rpc CreateSubtask(CreateSubtaskRequest) returns (CreateSubtaskResponse) {}
  rpc UpdateSubtask(UpdateSubtaskRequest) returns (UpdateSubtaskResponse) {}
  rpc DeleteSubtask(DeleteSubtaskRequest) returns (DeleteSubtaskResponse) {}
  rpc RemoveTaskDueDate(RemoveTaskDueDateRequest) returns (RemoveTaskDueDateResponse) {}
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
}
